name:                z21
version:             0.1.0.0
synopsis:            Z21 controller (http://www.z21.eu) driver for Haskell
homepage:            https://github.com/akru/z21-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Krupenkin
maintainer:          mail@akru.me
copyright:           (c) Alexander Krupenkin
category:            Hardware
build-type:          Simple 
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     System.Hardware.Z21
                     , System.Hardware.Z21.Types
  build-depends:       base >= 4.7 && < 5
                     , binary-conduit
                     , conduit-extra
                     , conduit
                     , network
                     , binary
  default-language:    Haskell2010

test-suite z21-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, z21
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/akru/z21-hs
